refactor code to match user handling functionality